--- a/nba.html
+++ b/nba.html
@@ -226,6 +226,166 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 07, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Washington Wizards vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        February 07, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 12:00 PM:00" data-start="February 07, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Houston Rockets vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        February 07, 2026 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 12:30 PM:00" data-start="February 07, 2026 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Dallas Mavericks vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        February 07, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 3:00 PM:00" data-start="February 07, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Utah Jazz vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        February 07, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 4:00 PM:00" data-start="February 07, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Charlotte Hornets vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        February 07, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 4:30 PM:00" data-start="February 07, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Denver Nuggets vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        February 07, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 5:00 PM:00" data-start="February 07, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Golden State Warriors vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        February 07, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 5:30 PM:00" data-start="February 07, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Philadelphia 76ers vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        February 07, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 6:00 PM:00" data-start="February 07, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         Memphis Grizzlies vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        February 07, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 7:00 PM:00" data-start="February 07, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Cleveland Cavaliers vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        February 07, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 08, 2026 7:00 PM:00" data-start="February 07, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
