--- a/soccer.html
+++ b/soccer.html
@@ -98,74 +98,154 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Al Nassr vs AL Ittihad</a></td>
-<td>February 6, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Man United vs Tottenham Hotspur</a></td>
+<td>February 7, 2026 04:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 09:30:00 AM" data-start="February 06, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Union Berlin vs Frankfurt</a></td>
-<td>February 6, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Derby County vs Ipswich Town</a></td>
+<td>February 7, 2026 04:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 11:30:00 AM" data-start="February 06, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Metz vs Lille</a></td>
-<td>February 6, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Southampton vs Watford</a></td>
+<td>February 7, 2026 04:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 11:45:00 AM" data-start="February 06, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Verona vs Pisa</a></td>
-<td>February 6, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Rayo Vallecano vs Real Sociedad</a></td>
+<td>February 7, 2026 05:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 11:45:00 AM" data-start="February 06, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Leeds United vs Nottingham Forest</a></td>
-<td>February 6, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Freiburg vs Werder Bremen</a></td>
+<td>February 7, 2026 06:30 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Airdrieonians vs St Mirren </a></td>
-<td>February 6, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Arsenal vs Sunderland</a></td>
+<td>February 7, 2026 07:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Celta De Vigo vs Osasuna</a></td>
-<td>February 6, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Bournemouth vs Aston Villa</a></td>
+<td>February 7, 2026 07:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Charlton Athletic vs Queens Park Rangers</a></td>
-<td>February 6, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Burnley vs West Ham</a></td>
+<td>February 7, 2026 07:00 AM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Caxias vs Ypiranga Erechim</a></td>
-<td>February 6, 2026 15:30 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Fulham vs Everton</a></td>
+<td>February 7, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Wolves vs Chelsea</a></td>
+<td>February 7, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Coventry City vs Oxford United</a></td>
+<td>February 7, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Birmingham City vs Leicester United</a></td>
+<td>February 7, 2026 07:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Barcelona vs Mallorca</a></td>
+<td>February 7, 2026 07:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Lens vs Rennes</a></td>
+<td>February 7, 2026 08:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Genoa vs Napoli</a></td>
+<td>February 7, 2026 09:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Newcastle United vs Brentford</a></td>
+<td>February 7, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Borussia M'gladbach vs Bayer Leverkusen</a></td>
+<td>February 7, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Celtic vs Dundee</a></td>
+<td>February 7, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Sevilla vs Girona</a></td>
+<td>February 7, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Brest vs Lorient</a></td>
+<td>February 7, 2026 10:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Fiorentina vs Torino</a></td>
+<td>February 7, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Real Sociedad vs Elche</a></td>
+<td>February 7, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Nantes vs Lyon</a></td>
+<td>February 7, 2026 12:05 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Atlético Mineiro vs Athletic Club</a></td>
+<td>February 7, 2026 13:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 03:30:00 PM" data-start="February 06, 2026 03:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Caxias vs Ypiranga Erechim</a></td>
-<td>February 6, 2026 15:30 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-15">River Plate vs Tigre</a></td>
+<td>February 7, 2026 15:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 03:30:00 PM" data-start="February 06, 2026 03:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Necaxa vs Atlético San Luis</a></td>
-<td>February 6, 2026 17:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-16">Toluca vs Cruz Azul</a></td>
+<td>February 7, 2026 15:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 05:00:00 PM" data-start="February 06, 2026 05:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Tigres UANL vs Santos Laguna</a></td>
-<td>February 6, 2026 17:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Flamengo vs Sampaio Corrêa RJ</a></td>
+<td>February 7, 2026 16:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 05:00:00 PM" data-start="February 06, 2026 05:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Tijuana vs Puebla</a></td>
-<td>February 6, 2026 19:06 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-16">Atlas vs Pumas UNAM</a></td>
+<td>February 7, 2026 17:05 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 07:06:00 PM" data-start="February 06, 2026 07:06:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Mazatlán vs Chivas</a></td>
-<td>February 6, 2026 19:06 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-17">Pachuca vs Juárez</a></td>
+<td>February 7, 2026 17:06 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 07:06:00 PM" data-start="February 06, 2026 07:06:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-16">America vs Monterrey</a></td>
+<td>February 7, 2026 19:10 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 05:00:00 PM" data-start="February 06, 2026 05:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
