--- a/nfl.html
+++ b/nfl.html
@@ -87,7 +87,7 @@
 </nav>
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming Fighting Events</h2>
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NFL Events</h2>
 <table id="eventsTable">
 <thead>
 <tr>
@@ -97,11 +97,6 @@
 </tr>
 </thead>
 <tbody>
-<tr>
-<td><a href="https://roxiestreams.info/nfl-streams-1">NFL Honors</a></td>
-<td>February 5, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 5, 2026 17:00:00"></span></td>
-</tr>
 <tr>
 <td><a href="https://roxiestreams.info/nfl-streams-1">Seattle Seahawks vs New England Patriots</a></td>
 <td>February 8, 2026 15:00 PM</td>
