--- a/motorsports.html
+++ b/motorsports.html
@@ -97,9 +97,14 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Cook Out</a></td>
-<td>February 04, 2026 15:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 04, 2026 15:00:00"></span>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Glendale</a></td>
+<td>February 07, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 10:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Glendale</a></td>
+<td>February 07, 2026 16:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 07, 2026 16:00:00"></span>
 </td>
 <tr>
 </tbody>
