--- a/fighting.html
+++ b/fighting.html
@@ -98,7 +98,7 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams=1">PFL Road to Dubai: Nurmagomedov vs Davis</a></td>
+<td><a href="https://roxiestreams.info/ppv-streams-1">PFL Road to Dubai: Nurmagomedov vs Davis</a></td>
 <td>February 7, 2026 06:00 AM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 06:00:00"></span></td>
 </tr>
