--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
 <tbody>
 <tr>
 <tr>
+<td><a href="https://roxiestreams.info/olympics-1">WINTER OLYMPICS COVERAGE</a></td>
+<td>February 7, 2026</td>
+<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 00:01:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
 <td>February 7, 2026 04:30/7:00 AM</td>
 <td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 04:30:00 AM"></span></td>
