--- a/ufc.html
+++ b/ufc.html
@@ -101,10 +101,10 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tennis.m3u8', 'daffodil'))">Stream 1 (TNT)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 2 (PARA)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', 'daffodil'))">Stream 3 (HUB Sports)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 4 (SPORTSNET+)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ataide.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt.m3u8', '601'))">Stream 2 (TNT)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('hub.m3u8', '601'))">Stream 3 (HUB Sports)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sn.m3u8', '601'))">Stream 4 (SPORTSNET)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -130,7 +130,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('tennis.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('ataide.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
