--- a/fighting.html
+++ b/fighting.html
@@ -110,6 +110,14 @@
 <td>February 7, 2026 14:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 14:00:00"></span></td>
 </tr>
+<td><a href="https://roxiestreams.info/ppv-streams-3">Redneck Brawl 12</a></td>
+<td>February 7, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/ppv-streams-4">BKFC: Knuckle Mania 6</a></td>
+<td>February 7, 2026 18:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 18:00:00"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
