--- a/ppv-streams-3.html
+++ b/ppv-streams-3.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
+<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
@@ -98,9 +100,9 @@
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
             <div id="playerContainer"></div>
-            <div class="streamchanger">
-<button class="streambutton" onclick="showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-oktagon-82-english/2')">Stream 1</button>
-            </div>
+	<div class="streamchanger">
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv3.m3u8', '601'))">Stream 1</button>
+	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
             </div>
@@ -115,50 +117,63 @@
     </footer>
 
 <script>
-    var clapprPlayer;
+var clapprPlayer;
+var domains = [];
+var subdomain = '601';  // Edit this per HTML file
 
-    function showPlayer(playerType, url) {
-        const container = document.getElementById('playerContainer');
-        container.innerHTML = ''; 
+// Load domains from txt file
+fetch('domains.txt')
+  .then(response => response.text())
+  .then(data => {
+    domains = data.trim().split('\n').filter(d => d.trim());
+    // Auto-load initial stream after domains load
+    setTimeout(() => showPlayer('clappr', getRandomStream('ppv3.m3u8')), 500);
+  })
+  .catch(() => {
+    console.error('Failed to load domains.txt');
+  });
 
-        if (playerType === 'clappr') {
-            if (clapprPlayer) {
-                clapprPlayer.destroy();
-            }
-            clapprPlayer = new Clappr.Player({
-                source: url,
-                parentId: '#playerContainer',
-                height: '100%',
-                width: '100%',
-                autoPlay: true,
-            });
-        } else if (playerType === 'iframe') {
-            container.innerHTML = `
-                <iframe title="RAF 05: Covington vs. Rockhold Player" 
-                        marginheight="0" marginwidth="0" 
-                        src="${url}" 
-                        scrolling="no" allowfullscreen="yes" 
-                        allow="autoplay; encrypted-media; picture-in-picture;" 
-                        width="100%" height="100%" frameborder="0">
-                </iframe>`;
-        }
+function getRandomStream(streamPath, subdomain = '601') {
+  if (domains.length === 0) {
+    return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
+  }
+  const randomDomain = domains[Math.floor(Math.random() * domains.length)];
+  return `https://${subdomain}.${randomDomain}/${streamPath}`;
+}
+
+function showPlayer(playerType, stream) {
+  if (playerType === "clappr") {
+    if (clapprPlayer) {
+      clapprPlayer.destroy();
     }
-
-    window.onload = function() {
-        showPlayer('iframe', 'https://embedsports.top/embed/admin/ppv-oktagon-82-english/2');
-    };
-</script>
-<script>
-    document.addEventListener('contextmenu', function (e) {
-        e.preventDefault();
+    clapprPlayer = new Clappr.Player({
+      source: stream,
+      parentId: "#playerContainer",
+      height: '100%',
+      width: '100%',
+      autoPlay: true,
     });
-
-    document.addEventListener('keydown', function (e) {
-        if ((e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C'))) ||
-            (e.ctrlKey && e.shiftKey && e.key === 'J')) {
+  }
+}
+</script>
+    <script>
+        document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
-        }
-    });
-</script>
-</body>
+        });
+
+        document.addEventListener('keydown', function (e) {
+            if ((e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C'))) ||
+                (e.ctrlKey && e.shiftKey && e.key === 'J')) {
+                e.preventDefault();
+            }
+        });
+    </script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+
+
+<script type="text/javascript">
+aclib.runPop({
+zoneId: '10754426',
+});
+</script></body>
 </html>
