--- a/soccer.html
+++ b/soccer.html
@@ -98,154 +98,104 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Man United vs Tottenham Hotspur</a></td>
-<td>February 7, 2026 04:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 04:30:00 AM" data-start="February 07, 2026 04:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Derby County vs Ipswich Town</a></td>
-<td>February 7, 2026 04:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 04:30:00 AM" data-start="February 07, 2026 04:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Southampton vs Watford</a></td>
-<td>February 7, 2026 04:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 04:30:00 AM" data-start="February 07, 2026 04:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Rayo Vallecano vs Real Sociedad</a></td>
-<td>February 7, 2026 05:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 05:00:00 AM" data-start="February 07, 2026 05:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Freiburg vs Werder Bremen</a></td>
-<td>February 7, 2026 06:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 06:30:00 AM" data-start="February 07, 2026 06:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Arsenal vs Sunderland</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Bournemouth vs Aston Villa</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Burnley vs West Ham</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Fulham vs Everton</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Wolves vs Chelsea</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Coventry City vs Oxford United</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Birmingham City vs Leicester United</a></td>
-<td>February 7, 2026 07:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:00:00 AM" data-start="February 07, 2026 07:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Barcelona vs Mallorca</a></td>
-<td>February 7, 2026 07:15 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 07:15:00 AM" data-start="February 07, 2026 07:15:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Lens vs Rennes</a></td>
-<td>February 7, 2026 08:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 08:00:00 AM" data-start="February 07, 2026 08:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Genoa vs Napoli</a></td>
-<td>February 7, 2026 09:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 09:00:00 AM" data-start="February 07, 2026 09:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Newcastle United vs Brentford</a></td>
-<td>February 7, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 09:30:00 AM" data-start="February 07, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Borussia M'gladbach vs Bayer Leverkusen</a></td>
-<td>February 7, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 09:30:00 AM" data-start="February 07, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Celtic vs Dundee</a></td>
-<td>February 7, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 09:30:00 AM" data-start="February 07, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Sevilla vs Girona</a></td>
-<td>February 7, 2026 09:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 09:30:00 AM" data-start="February 07, 2026 09:30:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Brest vs Lorient</a></td>
-<td>February 7, 2026 10:00 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 10:00:00 AM" data-start="February 07, 2026 10:00:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Fiorentina vs Torino</a></td>
-<td>February 7, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 11:45:00 AM" data-start="February 07, 2026 11:45:00 AM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Real Sociedad vs Elche</a></td>
-<td>February 7, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Nantes vs Lyon</a></td>
-<td>February 7, 2026 12:05 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 12:05:00 PM" data-start="February 07, 2026 12:05:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Atlético Mineiro vs Athletic Club</a></td>
-<td>February 7, 2026 13:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 01:30:00 PM" data-start="February 07, 2026 01:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-15">River Plate vs Tigre</a></td>
-<td>February 7, 2026 15:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 03:00:00 PM" data-start="February 07, 2026 03:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">Toluca vs Cruz Azul</a></td>
-<td>February 7, 2026 15:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 03:00:00 PM" data-start="February 07, 2026 03:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Flamengo vs Sampaio Corrêa RJ</a></td>
-<td>February 7, 2026 16:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 04:00:00 PM" data-start="February 07, 2026 04:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-16">Atlas vs Pumas UNAM</a></td>
-<td>February 7, 2026 17:05 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 05:05:00 PM" data-start="February 07, 2026 05:05:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-17">Pachuca vs Juárez</a></td>
-<td>February 7, 2026 17:06 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 08, 2026 05:06:00 PM" data-start="February 07, 2026 05:06:00 PM" span=""></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.info/soccer-streams-16">America vs Monterrey</a></td>
 <td>February 7, 2026 19:10 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 08, 2026 07:10:00 PM" data-start="February 07, 2026 07:10:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Bologna vs Parma</a></td>
+<td>February 8, 2026 03:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 03:30:00 AM" data-start="February 08, 2026 03:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Deportivo Alavés vs Getafe</a></td>
+<td>February 8, 2026 05:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 05:00:00 AM" data-start="February 08, 2026 05:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Brighton vs Crystal Palace</a></td>
+<td>February 8, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Lecce vs Udinese</a></td>
+<td>February 8, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Nice vs Monaco</a></td>
+<td>February 8, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Rangers vs Queen's Park</a></td>
+<td>February 8, 2026 06:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Köln vs Leipzig</a></td>
+<td>February 8, 2026 06:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 06:30:00 AM" data-start="February 08, 2026 06:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Athletic Club vs Levante</a></td>
+<td>February 8, 2026 07:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 07:15:00 AM" data-start="February 08, 2026 07:15:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Auxerre vs Paris</a></td>
+<td>February 8, 2026 08:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 08:15:00 AM" data-start="February 08, 2026 08:15:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Liverpool vs Man City</a></td>
+<td>February 8, 2026 08:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 08:30:00 AM" data-start="February 08, 2026 08:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Bayern München vs Hoffenheim</a></td>
+<td>February 8, 2026 08:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 08:30:00 AM" data-start="February 08, 2026 08:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Sassuolo vs Inter Milan</a></td>
+<td>February 8, 2026 09:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 09:00:00 AM" data-start="February 08, 2026 09:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Atlético Madrid vs Real Betis</a></td>
+<td>February 8, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 09:30:00 AM" data-start="February 08, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">PSG vs Marseille</a></td>
+<td>February 8, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 11:45:00 AM" data-start="February 08, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Juventus vs Lazio</a></td>
+<td>February 8, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 11:45:00 AM" data-start="February 08, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Valencia vs Real Madrid</a></td>
+<td>February 8, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 12:00:00 PM" data-start="February 08, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Cruzeiro vs América Mineiro</a></td>
+<td>February 8, 2026 13:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 01:00:00 PM" data-start="February 08, 2026 01:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Fluminense vs Maricá</a></td>
+<td>February 8, 2026 15:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 03:30:00 PM" data-start="February 08, 2026 03:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Vélez Sarsfield vs Boca Juniors</a></td>
+<td>February 8, 2026 17:15 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 09, 2026 05:15:00 PM" data-start="February 08, 2026 05:15:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
