--- a/nba.html
+++ b/nba.html
@@ -282,6 +282,82 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 08, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         New York Knicks vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        February 08, 2026 9:30 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 09, 2026 9:30 AM:00" data-start="February 08, 2026 9:30 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Miami Heat vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        February 08, 2026 11:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 09, 2026 11:00 AM:00" data-start="February 08, 2026 11:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Indiana Pacers vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        February 08, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 09, 2026 12:00 PM:00" data-start="February 08, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Los Angeles Clippers vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        February 08, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 09, 2026 12:00 PM:00" data-start="February 08, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
