--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -101,7 +101,10 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('aston.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', '601'))">Stream 1</button>
+<button class="streambutton"
+  onclick="showPlayer('clappr', 'https://d358zjutf6reju.cloudfront.net/57c212bf-d317-49ed-8d72-bb9dadb882a7/manifest.m3u8')">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('epl.m3u8', '601'))">Stream 3</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -127,7 +130,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('aston.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('main.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
