--- a/soccer-streams-3.html
+++ b/soccer-streams-3.html
@@ -102,6 +102,9 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', '601'))">Stream 1</button>
+<button class="streambutton"
+  onclick="showPlayer('clappr', 'https://d358zjutf6reju.cloudfront.net/57c212bf-d317-49ed-8d72-bb9dadb882a7/manifest.m3u8')">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('epl.m3u8', '601'))">Stream 3</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
