--- a/fighting.html
+++ b/fighting.html
@@ -98,27 +98,10 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">PFL Road to Dubai: Nurmagomedov vs Davis</a></td>
-<td>February 7, 2026 06:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 06:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.info/ppv-streams-2">Ball vs. Figueroa</a></td>
-<td>February 7, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 11:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Bautista vs Oliveira</a></td>
-<td>February 7, 2026 14:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 14:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.info/ppv-streams-3">Redneck Brawl 12</a></td>
-<td>February 7, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 17:00:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.info/ppv-streams-4">BKFC: Knuckle Mania 6</a></td>
-<td>February 7, 2026 18:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 7, 2026 18:00:00"></span></td>
-</tr>
-</tbody>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE RAW</a></td>
+<td>February 8, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 8, 2026 17:00:00"></span></td>
+</tr></tbody>
 </table>
 </div>
 </div>
