--- a/index.html
+++ b/index.html
@@ -183,33 +183,28 @@
 <tr>
 <tr>
 <td><a href="https://roxiestreams.info/olympics-1">WINTER OLYMPICS COVERAGE</a></td>
-<td>February 7, 2026</td>
+<td>February 8, 2026</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 12:00:00 PM" data-start="February 07, 2026 00:01:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
-<td>February 7, 2026 04:30/7:00 AM</td>
-<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 04:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Laliga</a></td>
-<td>February 7, 2026 05:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Laliga</a></td>
+<td>February 8, 2026 05:00 AM</td>
 <td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">PFL Road to Dubai</a></td>
-<td>February 7, 2026 06:00 AM</td>
+<td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
+<td>February 8, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/ppv-streams-1">NBA</a></td>
+<td>February 8, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Glendale</a></td>
-<td>February 7, 2026 10:00 AM/4:00 PM</td>
+<td><a href="https://roxiestreams.info/nfl-streams-1">SUPER BOWL LX (Seattle Seahawks vs New England Patriots)</a></td>
+<td>February 7, 2026 3:00 PM</td>
 <td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/ufc">UFC Fight Night</a></td>
-<td>February 7, 2026 2:00 PM</td>
-<td><span class="countdown-timer" data-end="February 08, 2026 04:30:00 PM" data-start="February 07, 2026 02:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
