--- a/index.html
+++ b/index.html
@@ -189,22 +189,22 @@
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-2">Laliga</a></td>
 <td>February 8, 2026 05:00 AM</td>
-<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 05:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 09, 2026 05:00:00 AM" data-start="February 08, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">Premier League</a></td>
 <td>February 8, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 04:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 09, 2026 06:00:00 AM" data-start="February 08, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/ppv-streams-1">NBA</a></td>
+<td><a href="https://roxiestreams.info/nba">NBA</a></td>
 <td>February 8, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 06:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="February 09, 2026 09:30:00 AM" data-start="February 08, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nfl-streams-1">SUPER BOWL LX (Seattle Seahawks vs New England Patriots)</a></td>
-<td>February 7, 2026 3:00 PM</td>
-<td><span class="countdown-timer" data-end="February 08, 2026 12:00:00 PM" data-start="February 07, 2026 10:00:00 AM"></span></td>
+<td>February 8, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="February 09, 2026 03:00:00 PM" data-start="February 08, 2026 03:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
