--- a/index.html
+++ b/index.html
@@ -157,12 +157,16 @@
 </div>
 </nav>
 <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
-<span class="alert-icon">⚡</span>
 <span class="nhl-gold-text">
-        We noticed some lag and buffering during big events, so we’ve upgraded the capacity of every stream to prevent this. 🙏
-        <br/>
-        If you’re still having issues, please try refreshing the page or using an incognito window.
-    </span>
+    PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
+    <br>
+    <a href="https://roxiestreams.cc/" class="nhl-link" target="_blank" rel="noopener">
+        https://roxiestreams.cc/
+    </a>
+    <br/>
+    If you’re still having issues, please try refreshing the page or using an incognito window.
+</span>
+
 <button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
 </div>
 <div class="alert alert-danger alert-dismissible mt-2" role="alert">
