--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 </div>
 </nav>
 <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
+<span class="alert-icon">⚡</span>
 <span class="nhl-gold-text">
     PREVIOUS DOMAIN GOT BANNED (.LIVE) USE .INFO & BOOKMARK OUR BACKUP LINKS & JOIN THE DC
     <br>
