--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/ataide.m3u8')">NBC</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/daffodil.m3u8')">NBC</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.833577.xyz/sky.m3u8')">Sky Sports Main</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/tsn.m3u8')">TSN</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/channelfive.m3u8')">Channel 5</button>
@@ -140,7 +140,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.833577.xyz/ataide.m3u8');
+            showPlayer('clappr', 'https://601.833577.xyz/daffodil.m3u8');
         };
     </script>
     <script>
