--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -125,12 +125,10 @@ var clapprPlayer;
 var domains = [];
 var subdomain = '601';  // Edit this per HTML file
 
-// Load domains from txt file
-fetch('domains.txt')
+fetch('domains1.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
-    // Auto-load initial stream after domains load
     setTimeout(() => showPlayer('clappr', getRandomStream('daffodil.m3u8')), 500);
   })
   .catch(() => {
